--- a/src/templates/cv-regular/main-block/main-block.module.scss
+++ b/src/templates/cv-regular/main-block/main-block.module.scss
@@ -1,6 +1,6 @@
-@import '~styles/variables.scss';
 @import '~styles/mixins.scss';
 @import '~styles/functions.scss';
+@import '~components/typography/typography-variables.scss';
 
 .main-block {
   margin-bottom: get-rem(36);
