--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -11,14 +11,43 @@
   align-items: stretch;
   min-height: 100%;
 
-  &__canvas {
+  &__canvas-container {
     position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    pointer-events: none;
+
+    &::before,
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      opacity: 0.25;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 1000 1000' width='1000' height='1000' opacity='1'%0A%3E%3Cdefs%3E%3Cfilter id='nnnoise-filter' x='-20%25' y='-20%25' width='140%25' height='140%25' filterUnits='objectBoundingBox' primitiveUnits='userSpaceOnUse' color-interpolation-filters='linearRGB' %3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.2' numOctaves='4' seed='15' stitchTiles='stitch' x='0%25' y='0%25' width='100%25' height='100%25' result='turbulence' %3E%3C/feTurbulence%3E%3CfeSpecularLighting surfaceScale='18' specularConstant='0.7' specularExponent='20' lighting-color='hsl(0, 0%25, 80%25)' x='0%25' y='0%25' width='100%25' height='100%25' in='turbulence' result='specularLighting' %3E%3CfeDistantLight azimuth='3' elevation='100'%3E%3C/feDistantLight%3E%3C/feSpecularLighting%3E%3CfeColorMatrix type='saturate' values='0' x='0%25' y='0%25' width='100%25' height='100%25' in='specularLighting' result='colormatrix' %3E%3C/feColorMatrix%3E%3C/filter%3E%3C/defs%3E%3Crect width='100%25' height='100%25' fill='hsl(23, 0%25, 100%25)' filter='url(%23nnnoise-filter)' %3E%3C/rect%3E%3C/svg%3E%0A");
+      background-repeat: repeat;
+      z-index: 2;
+    }
+
+    &::after {
+      filter: invert(100%);
+      opacity: 0.6;
+      background-position: 20px 20px;
+    }
+  }
+
+  &__canvas {
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 1;
-    pointer-events: none;
 
     &_safari-fix {
       filter: blur(90px);
