--- a/src/templates/cv-regular/aside/aside.module.scss
+++ b/src/templates/cv-regular/aside/aside.module.scss
@@ -76,13 +76,24 @@
 }
 
 .position {
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
+  -webkit-text-fill-color: transparent;
 
   @include themeLight {
-    background-image: linear-gradient(102.91deg, hsl(232, 90%, 45%) 5%, hsl(255, 83%, 65%) 100%);
+    background-image: linear-gradient(
+      102.91deg,
+      hsl(232, 90%, 45%) 5%,
+      hsl(255, 83%, 65%) 100%
+    );
+
+    @include print {
+      background-image: none;
+      color: hsl(232, 90%, 45%);
+      background-clip: initial;
+      text-fill-color: initial;
+      -webkit-text-fill-color: initial;
+    }
   }
 
   @include themeMidnight {
@@ -94,7 +105,11 @@
   }
 
   @include themeDark {
-    background-image: linear-gradient(102.91deg, hsl(232, 90%, 75%) 5%, #8f94fb 100%);
+    background-image: linear-gradient(
+      102.91deg,
+      hsl(232, 90%, 75%) 5%,
+      #8f94fb 100%
+    );
   }
 }
 
