--- a/src/components/hero/hero.module.scss
+++ b/src/components/hero/hero.module.scss
@@ -8,7 +8,7 @@
 
 .hero {
   display: flex;
-  position: fixed;
+  position: relative;
   align-items: stretch;
   min-height: 100%;
   background-color: hsl(35, 85%, 60%);
@@ -28,7 +28,7 @@
   }
 
   &__canvas {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
